--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
       ],
       "outputMode": "new-only"
     },
+    "pkg": {
+      "dependsOn": ["^build"],
+      "cache": true
+    },
     "start": {
       "dependsOn": ["^build"],
       "cache": true
