--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -3,7 +3,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "extends": ["plugin:@typescript-eslint/recommended", "plugin:@stencil-community/recommended", "ix"],
+  "extends": [/* "plugin:@typescript-eslint/recommended", */ "plugin:@stencil-community/recommended", "ix"],
   "rules": {
     "@stencil-community/async-methods": 0,
     "@stencil-community/own-props-must-be-private": 0,
