--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -2,7 +2,7 @@ name: Deploy Preview
 
 on:
   pull_request:
-    types: [opened,synchronize,reopened]
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
   comment-workflow:
