ci: add debug statement

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -37,7 +37,7 @@ jobs:
       #     result-encoding: string
 
       - name: Deploy Preview for PR
-        if: "contains(github.event.pull_request.labels.*.name, 'Deploy Preview')"
+        # if: "contains(github.event.pull_request.labels.*.name, 'Deploy Preview')"
         shell: bash
         run: |
           echo ${{ toJSON(github.event.pull_request) }}
