ci: add debug statement

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -36,8 +36,12 @@ jobs:
       #       return '';
       #     result-encoding: string
 
+      - name: Debug
+        shell: bash
+        run: echo ${{ contains(github.event.pull_request.labels.*.name, 'Deploy Preview') }}
+
       - name: Deploy Preview for PR
-        if: contains( github.event.pull_request.labels.*.name, 'Deploy Preview')
+        if: contains(github.event.pull_request.labels.*.name, 'Deploy Preview')
         shell: bash
         run: |
           echo Deploy to netlify
