--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -9,46 +9,51 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      # Useful if we try to also integrate other labels
-      # - name: Find comments
-      #   id: find_comments
-      #   uses: actions-cool/issues-helper@v3
-      #   with:
-      #     actions: 'find-comments'
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     issue-number: ${{ github.event.issue.number }}
-      #     comment-auth: 'github-actions[bot]'
-      #     body-includes: '🤖 Hello '
-
-      # - uses: actions/github-script@v7
-      #   id: filter-comment
-      #   env:
-      #     COMMENTS_RESULT: ${{ steps.find_comments.outputs.comments }}
-      #   with:
-      #     script: |
-      #       const { COMMENTS_RESULT } = process.env;
-      #       const comments = JSON.parse(COMMENTS_RESULT);
-
-      #       if (comments.length === 1) {
-      #         return comments[0].id;
-      #       }
-
-      #       return '';
-      #     result-encoding: string
-
       - name: Deploy Preview for PR
         if: contains(github.event.pull_request.labels.*.name, 'Deploy Preview')
-        shell: bash
-        run: |
-          echo Deploy to netlify
-        # uses: actions-cool/issues-helper@v3
-        # with:
-        #   actions: 'create-comment'
-        #   token: ${{ secrets.GITHUB_TOKEN }}
-        #   body: |
-        #     🤖 Hello @${{ github.event.issue.user.login }}
+        uses: actions-cool/issues-helper@v3
+        with:
+          actions: 'create-comment'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            🤖 PR Preview Deployment
 
-        #     Your issue will be analyzed and is part of our internal workflow.
-        #     To get informed about our workflow please checkout the [Contributing Guidelines](https://github.com/siemens/ix/blob/main/CONTRIBUTING.md#issue-workflow)
+            Deployment in progress
 
-        #     JIRA: IX-000
+
+      - name: Find comments
+        id: find_comments
+        uses: actions-cool/issues-helper@v3
+        with:
+          actions: 'find-comments'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
+          comment-auth: 'github-actions[bot]'
+          body-includes: '🤖 PR Preview Deployment'
+
+      - uses: actions/github-script@v7
+        id: filter-comment
+        env:
+          COMMENTS_RESULT: ${{ steps.find_comments.outputs.comments }}
+        with:
+          script: |
+            const { COMMENTS_RESULT } = process.env;
+            const comments = JSON.parse(COMMENTS_RESULT);
+
+            if (comments.length === 1) {
+              return comments[0].id;
+            }
+
+            return '';
+          result-encoding: string
+
+      - name: Update comment
+        uses: actions-cool/issues-helper@v3
+        with:
+          actions: 'update-comment'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          comment-id: ${{ steps.filter-comment.outputs.results }}
+          body: |
+            🤖 PR Preview Deployment
+
+            Deployment in ready: <URL>
