--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -105,7 +105,6 @@ jobs:
   merge-core-reports:
       if: failure()
       needs: [visual-testing-core]
-
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v3
@@ -143,6 +142,8 @@ jobs:
 
   deploy-preview:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'Deploy Preview') }}
+    needs: [build]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
