--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -157,7 +157,7 @@ jobs:
         id: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --context deploy-preview --dir packages/documentation/build
+          args: deploy --context deploy-preview --filter documentation
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
