--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -157,7 +157,45 @@ jobs:
         id: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --filter documentation
+          args: deploy --filter documentation --alias pr-${{ github.event.pull_request.number }}
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+
+      - name: Find comments
+        id: find_comments
+        uses: actions-cool/issues-helper@v3
+        with:
+          actions: 'find-comments'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-auth: 'github-actions[bot]'
+          body-includes: '🚢 PR Deployment is ready '
+
+      - uses: actions/github-script@v7
+        id: filter-comment
+        env:
+          COMMENTS_RESULT: ${{ steps.find_comments.outputs.comments }}
+        with:
+          script: |
+            const { COMMENTS_RESULT } = process.env;
+            const comments = JSON.parse(COMMENTS_RESULT);
+
+            if (comments.length === 1) {
+              return comments[0].id;
+            }
+
+            return '';
+          result-encoding: string
+
+      - name: Create PR comment
+        if: ${{ steps.filter-comment.outputs.result == '' }}
+        uses: actions-cool/issues-helper@v3
+        with:
+          actions: 'create-comment'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            🚢 PR Deployment is ready
+
+            Checkout [${{ steps.publish.outputs.NETLIFY_URL }}](${{ steps.publish.outputs.NETLIFY_URL }})
+
