--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -22,14 +22,14 @@ jobs:
 
       - uses: ./.github/workflows/actions/turbo
 
-      # - name: Build
-      #   run: pnpm build --cache-dir=.turbo --filter documentation
+      - name: Build
+        run: pnpm build --cache-dir=.turbo --filter documentation
 
       - name: Publish
         id: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --build --context deploy-preview --filter documentation --debug
+          args: deploy --filter documentation --context dev
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
