--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -22,17 +22,19 @@ jobs:
 
       - uses: ./.github/workflows/actions/turbo
 
-      - name: Build
-        run: pnpm build --cache-dir=.turbo --filter documentation
+      # - name: Build
+      #   run: pnpm build --cache-dir=.turbo --filter documentation
 
       - name: Publish
         id: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --filter documentation --context dev
+          args: deploy --build --filter documentation --context deploy-preview
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          FIGMA_API_TOKEN: ${{ secrets.FIGMA_API_TOKEN }}
+          CSC: ${{ secrets.READ_CSC_TOKEN }}
 
       - name: Find comments
         id: find_comments
