--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -32,10 +32,11 @@ jobs:
         id: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --filter documentation --alias pr-preview-${{ github.event.pull_request.number }} --message "PR ${{ github.event.pull_request.number }}"
+          args: deploy --filter documentation --alias pr-preview-${{ github.event.pull_request.number }} --message "PR $PR_NUMBER"
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
 
       - name: Find comments
         id: find_comments
@@ -45,7 +46,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           comment-auth: 'github-actions[bot]'
-          body-includes: '🚢 PR Deployment is ready'
+          body-includes: 'Deploy Preview for *industrial-experience* ready!'
 
       - uses: actions/github-script@v7
         id: filter-comment
@@ -69,8 +70,11 @@ jobs:
           actions: 'create-comment'
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
-            | 🚢 PR Preview Deployment is ready  | - |
-            |-------------|-------|
-            | ✅ Preview  | [${{ steps.publish.outputs.NETLIFY_URL }}](${{ steps.publish.outputs.NETLIFY_URL }}) |
-            | 🗂️ Logs     | [${{ steps.publish.outputs.NETLIFY_LOGS_URL }}](${{ steps.publish.outputs.NETLIFY_LOGS_URL }}) |
-            | 🚧 Settings | TODO |
+            ### <span aria-hidden="true">✅</span> Deploy Preview for *industrial-experience* ready!
+
+
+            |  Name | Link |
+            |:-:|------------------------|
+            |<span aria-hidden="true">🔍</span> Latest deploy log | [${{ steps.publish.outputs.NETLIFY_LOGS_URL }}](${{ steps.publish.outputs.NETLIFY_LOGS_URL }}) |
+            |<span aria-hidden="true">😎</span> Deploy Preview | [${{ steps.publish.outputs.NETLIFY_URL }}](${{ steps.publish.outputs.NETLIFY_URL }}) |
+            ---
