--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -13,8 +13,30 @@ on:
 concurrency: pr-preview-${{ github.ref }}
 
 jobs:
-  deploy-preview:
+  changes:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'Deploy Preview') }}
+    runs-on: ubuntu-latest
+    outputs:
+      core_any_changed: ${{ steps.changes.outputs.core_any_changed }}
+      docs_any_changed: ${{ steps.changes.outputs.docs_any_changed }}
+    steps:
+    - uses: actions/checkout@v3
+    - name: Track changes between commits
+      id: changes
+      uses: tj-actions/changed-files@v43
+      with:
+        files_yaml: |
+          core:
+            - 'packages/core/**'
+          docs:
+            - 'packages/documentation/**'
+            - 'packages/html-test-app/**'
+            - 'packages/angular-test-app/**'
+            - 'packages/react-test-app/**'
+            - 'packages/vue-test-app/**'
+
+  deploy-preview:
+    if: ${{ needs.changes.outputs.core_any_changed == 'true' && needs.changes.outputs.docs_any_changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
