--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -27,15 +27,16 @@ jobs:
       with:
         files_yaml: |
           core:
-            - 'packages/core/**'
+            - packages/core/**
           docs:
-            - 'packages/documentation/**'
-            - 'packages/html-test-app/**'
-            - 'packages/angular-test-app/**'
-            - 'packages/react-test-app/**'
-            - 'packages/vue-test-app/**'
+            - packages/documentation/**
+            - packages/html-test-app/**
+            - packages/angular-test-app/**
+            - packages/react-test-app/**
+            - packages/vue-test-app/**
 
   deploy-preview:
+    needs: changes
     if: ${{ needs.changes.outputs.core_any_changed == 'true' && needs.changes.outputs.docs_any_changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
