fix: use need syntax

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -43,6 +43,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: List all changed files
+        env:
+          ALL_CHANGED_FILES: ${{ needs.changes.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
+
       - uses: ./.github/workflows/actions/turbo
 
       - name: Build
