--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -13,12 +13,13 @@ on:
 concurrency: pr-preview-${{ github.ref }}
 
 jobs:
-  changes:
+  change-detection:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'Deploy Preview') }}
     runs-on: ubuntu-latest
     outputs:
       core_any_changed: ${{ steps.changes.outputs.core_any_changed }}
       docs_any_changed: ${{ steps.changes.outputs.docs_any_changed }}
+      all_changed_files: ${{ steps.changes.outputs.all_changed_files}}
     steps:
     - uses: actions/checkout@v3
     - name: Track changes between commits
@@ -36,8 +37,8 @@ jobs:
             - packages/vue-test-app/**
 
   deploy-preview:
-    needs: changes
-    if: ${{ needs.changes.outputs.core_any_changed == 'true' && needs.changes.outputs.docs_any_changed == 'true' }}
+    needs: change-detection
+    if: ${{ needs.change-detection.outputs.core_any_changed == 'true' && needs.change-detection.outputs.docs_any_changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -45,7 +46,7 @@ jobs:
 
       - name: List all changed files
         env:
-          ALL_CHANGED_FILES: ${{ needs.changes.outputs.all_changed_files }}
+          ALL_CHANGED_FILES: ${{ needs.change-detection.outputs.all_changed_files }}
         run: |
           for file in ${ALL_CHANGED_FILES}; do
             echo "$file was changed"
