--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -19,6 +19,6 @@
       "@utils/test": ["src/tests/utils/test"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "playwright-ct.config.ts", "playwright.config.ts"],
   "exclude": ["node_modules"]
 }
