--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -16,8 +16,8 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
-    "@siemens/ix": "latest",
-    "@siemens/ix-angular": "latest",
+    "@siemens/ix": "<VERSION>",
+    "@siemens/ix-angular": "<VERSION>",
     "@siemens/ix-icons": "latest",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
