--- a/packages/documentation/static/code-runtime/html/package.json
+++ b/packages/documentation/static/code-runtime/html/package.json
@@ -11,7 +11,7 @@
   ],
   "devDependencies": {
     "vite": "^3.1.0",
-    "@siemens/ix": "latest",
+    "@siemens/ix": "<VERSION>",
     "@siemens/ix-icons": "latest"
   }
 }
