docs: deploy multiple docs versions (#1177)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,28 +15,29 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      core: ${{ steps.changes.outputs.core }}
-      angular: ${{ steps.changes.outputs.angular }}
-      aggrid: ${{ steps.changes.outputs.aggrid }}
-      docs: ${{ steps.changes.outputs.docs }}
+      core_any_changed: ${{ steps.changes.outputs.core_any_changed }}
+      angular_any_changed: ${{ steps.changes.outputs.angular_any_changed }}
+      aggrid_any_changed: ${{ steps.changes.outputs.aggrid_any_changed }}
+      docs_any_changed: ${{ steps.changes.outputs.docs_any_changed }}
     steps:
     - uses: actions/checkout@v3
-    - uses: dorny/paths-filter@v2
+    - name: Track changes between commits
       id: changes
+      uses: tj-actions/changed-files@v43
       with:
-        filters: |
+        files_yaml: |
           core:
-            - 'packages/core/**'
+            - packages/core/**
           angular:
-            - 'packages/angular/**'
+            - packages/angular/**
           aggrid:
-            - 'packages/aggrid/**'
+            - packages/aggrid/**
           docs:
-            - 'packages/documentation/**'
-            - 'packages/html-test-app/**'
-            - 'packages/angular-test-app/**'
-            - 'packages/react-test-app/**'
-            - 'packages/vue-test-app/**'
+            - packages/documentation/**
+            - packages/html-test-app/**
+            - packages/angular-test-app/**
+            - packages/react-test-app/**
+            - packages/vue-test-app/**
 
   build:
     needs: changes
@@ -54,7 +55,7 @@ jobs:
         run: pnpm lint
 
   visual-testing-core:
-    if: ${{ needs.changes.outputs.core == 'true' }}
+    if: ${{ needs.changes.outputs.core_any_changed == 'true' }}
     needs: [build, changes]
     timeout-minutes: 10
     runs-on: ubuntu-latest
@@ -80,8 +81,8 @@ jobs:
           retention-days: 1
 
   visual-testing-aggrid:
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.aggrid == 'true' }}
-    needs: [build]
+    if: ${{ needs.changes.outputs.core_any_changed == 'true' || needs.changes.outputs.aggrid_any_changed == 'true' }}
+    needs: [build, changes]
     timeout-minutes: 10
     runs-on: ubuntu-latest
     container:
@@ -104,7 +105,6 @@ jobs:
   merge-core-reports:
       if: failure()
       needs: [visual-testing-core]
-
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v3
@@ -125,9 +125,10 @@ jobs:
           name: core-html-report--attempt-${{ github.run_attempt }}
           path: playwright-report
           retention-days: 2
+
   unit:
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.angular == 'true' }}
-    needs: [build]
+    if: ${{ needs.changes.outputs.core_any_changed == 'true' || needs.changes.outputs.angular_any_changed == 'true' }}
+    needs: [build, changes]
     timeout-minutes: 10
     runs-on: ubuntu-latest
     container:
