--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -54,6 +54,19 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+  build-docs:
+    needs: [changes, build]
+    if: ${{ needs.changes.outputs.docs_any_changed == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: ./.github/workflows/actions/turbo
+
+      - name: Build
+        run: pnpm build --cache-dir=.turbo --filter documentation
+
   visual-testing-core:
     if: ${{ needs.changes.outputs.core_any_changed == 'true' }}
     needs: [build, changes]
