--- a/packages/echarts/package.json
+++ b/packages/echarts/package.json
@@ -19,7 +19,7 @@
     "build": "npm run clean && npm run compile",
     "clean": "rimraf dist",
     "compile": "rollup -c",
-    "test:e2e": "playwright test",
+    "visual-regression": "playwright test",
     "host-root": "http-server -a 127.0.0.1"
   },
   "author": "",
