--- a/packages/echarts/tsconfig.json
+++ b/packages/echarts/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "lib": ["dom", "es2015"],
     "importHelpers": true,
-    "module": "esnext",
+    "module": "es2015",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
