--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -12,7 +12,7 @@ concurrency: deploy-gh-pages-${{ github.ref }}
 
 jobs:
   deploy-gh-pages:
-    if: ${{ inputs.confirm_deployment == true }}
+    if: ${{ inputs.confirm_deployment == true && github.repository == 'siemens/ix' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
