--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,6 +41,7 @@
     "babel-jest": "^29.7.0",
     "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.31.11",
+    "happy-dom": "^14.7.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
