feat(example-styles): introduce new example-styles package

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -34,6 +34,7 @@ jobs:
             - packages/aggrid/**
           docs:
             - packages/documentation/**
+            - packages/example-styles/**
             - packages/html-test-app/**
             - packages/angular-test-app/**
             - packages/react-test-app/**
