--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -54,6 +54,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
+    "shadow-dom-testing-library": "^1.11.2",
     "typescript": "^4.5.5",
     "vitest": "^1.3.1"
   },
