--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -18,7 +18,10 @@
     "@popperjs/core": "^2.11.6",
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-angular": "<VERSION>",
+    "@siemens/ix-aggrid": "<VERSION>",
     "@siemens/ix-icons": "latest",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-angular": "^30.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
