--- a/packages/documentation/static/code-runtime/html/package.json
+++ b/packages/documentation/static/code-runtime/html/package.json
@@ -9,9 +9,12 @@
   "files": [
     "dist"
   ],
-  "devDependencies": {
-    "vite": "^3.1.0",
+  "dependencies": {
     "@siemens/ix": "<VERSION>",
+    "@siemens/ix-aggrid": "<VERSION>",
     "@siemens/ix-icons": "latest"
+  },
+  "devDependencies": {
+    "vite": "^3.1.0"
   }
 }
