--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -12,8 +12,11 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
     "@siemens/ix": "<VERSION>",
+    "@siemens/ix-aggrid": "<VERSION>",
     "@siemens/ix-icons": "latest",
-    "@siemens/ix-react": "<VERSION>"
+    "@siemens/ix-react": "<VERSION>",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-react": "^29.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
