--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -11,7 +11,10 @@
     "vue": "^3.2.6",
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-icons": "<VERSION>",
-    "@siemens/ix-vue": "<VERSION>"
+    "@siemens/ix-vue": "<VERSION>",
+    "@siemens/ix-aggrid": "<VERSION>",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-vue3": "^28.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
