--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -14,12 +14,9 @@
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-react": "<VERSION>",
     "@siemens/ix-echarts": "<VERSION>",
-    "@siemens/ix-aggrid": "<VERSION>",
     "@siemens/ix-icons": "latest",
     "echarts-for-react": "~3.0.2",
-    "echarts": "^5.4.1",
-    "ag-grid-community": "^30.2.0",
-    "ag-grid-react": "^29.1.0"
+    "echarts": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
