--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "dotenv -- turbo run test",
     "prepare": "husky install",
     "ci:version": "pnpm changeset version && pnpm i --lockfile-only",
-    "ci:publish": "pnpm publish -r --dry-run"
+    "ci:publish": "pnpm publish -r"
   },
   "dependencies": {
     "tslib": "^2.3.0"
