--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,7 @@
     "test:spec": "stencil test --spec",
     "test:ct": "playwright test --config playwright-ct.config.ts --reporter list",
     "visual-regression": "playwright test",
-    "host-root": "http-server ./ -a 127.0.0.1 -p 8080 -c-1",
+    "host-root": "http-server -a 127.0.0.1 -p 8080 -c-1",
     "generate": "stencil generate",
     "pkg": "pnpm pack"
   },
