--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
-    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-icons": "v3-preview",
     "@stencil-community/eslint-plugin": "^0.7.1",
     "@stencil-community/postcss": "^2.2.0",
     "@stencil/angular-output-target": "^0.8.3",
@@ -89,7 +89,7 @@
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
-    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-icons": "v3-preview",
     "bootstrap": "~5.2.0"
   },
   "config": {
