--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -59,7 +59,7 @@
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
-    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-icons": "v3-preview",
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
   },
