--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -43,6 +43,6 @@
   },
   "peerDependencies": {
     "vue": ">=3.2.45",
-    "@siemens/ix-icons": "^2.0.0"
+    "@siemens/ix-icons": "v3-preview"
   }
 }
