--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -16,28 +16,29 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@siemens/ix": "~2.2.0"
+    "@siemens/ix": "~2.2.0",
+    "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": ">=13.4.0",
-    "@angular/forms": ">=13.4.0",
+    "@angular/core": ">=17.3.0",
+    "@angular/forms": ">=17.3.0",
     "@siemens/ix-icons": "v3-preview"
   },
   "devDependencies": {
-    "@angular/common": "v13-lts",
-    "@angular/compiler": "v13-lts",
-    "@angular/compiler-cli": "v13-lts",
-    "@angular/core": "v13-lts",
-    "@angular/forms": "v13-lts",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
     "@jest/globals": "^29.3.1",
     "@siemens/ix": "~2.2.0",
     "@types/jest": "^29.2.3",
     "fs-extra": "^10.1.0",
     "jest": "^29.3.1",
-    "jest-preset-angular": "^12.2.3",
-    "ng-packagr": "^14.2.0",
+    "jest-preset-angular": "^14.0.3",
+    "ng-packagr": "^17.3.0",
     "ts-jest": "^29.0.3",
-    "typescript": "4.6.4"
+    "typescript": "~5.4.2"
   },
   "publishConfig": {
     "directory": "dist"
