--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -27,7 +27,7 @@
     "pretty": true,
     "removeComments": false,
     "importHelpers": true,
-    "rootDir": "src",
+    "rootDir": "./",
     "strictPropertyInitialization": false,
     "target": "es2015",
     "baseUrl": ".",
@@ -35,5 +35,5 @@
     "skipLibCheck": true
   },
   "exclude": ["node_modules"],
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts", "standalone/src/index.ts"]
 }
