--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "visual-regression": "dotenv -- turbo run visual-regression",
     "test": "dotenv -- turbo run test",
     "prepare": "husky install",
+    "compare-examples": "node ./scripts/compare-preview-examples-across-test-apps.js",
     "ci:version": "pnpm changeset version && pnpm i --lockfile-only",
     "ci:publish": "pnpm publish -r --dry-run"
   },
